<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/accountUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blueAdmin"
        tools:ignore="NotSibling">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="12dp"
            android:background="@drawable/oval">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/identify_user"
                android:paddingHorizontal="30dp"
                android:paddingVertical="30dp"
                android:src="@drawable/user_solid_52"
                app:tint="@color/blueAdmin" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_horizontal"
                android:ellipsize="end"
                android:maxWidth="100dp"
                android:maxLines="1"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp"
                android:text="@string/username"
                android:textColor="@color/blueAdmin"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:ellipsize="end"
                android:maxWidth="100dp"
                android:maxLines="1"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>